changed testnames and changed minor things

--- a/java/practice/practice_with_run_tests/app/build.gradle
+++ b/java/practice/practice_with_run_tests/app/build.gradle
@@ -8,6 +8,16 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+    id 'jacoco'
+}
+
+jacocoTestReport {
+  dependsOn test
+  reports {
+    xml.required = false
+    csv.required = false
+    html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+  }
 }
 
 repositories {
