--- a/java/practice/practice_with_run_tests/app/build.gradle
+++ b/java/practice/practice_with_run_tests/app/build.gradle
@@ -20,6 +20,10 @@ jacocoTestReport {
   }
 }
 
+tasks.test {
+    ignoreFailures = true
+}
+
 repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
